# nsis-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
examples/: dump.rs
src/: addressmap.rs  error.rs  lib.rs  util.rs
src/decompress/: bzip2.rs  deflate.rs  lzma.rs  mod.rs
src/header/: blockheader.rs  commonheader.rs  firstheader.rs  mod.rs
src/installer/: analysis.rs  callback.rs  files.rs  mod.rs  nsisinstaller.rs
src/nsis/: ctlcolors.rs  entry.rs  langtable.rs  mod.rs  page.rs  section.rs
src/opcode/: info.rs  mod.rs  version.rs
src/strings/: ansi.rs  mod.rs  park.rs  unicode.rs
tests/: integration.rs
tests/build_fixtures/: ansi_deflate.nsi  bzip2_nonsolid.nsi  bzip2_solid.nsi  deflate_nonsolid.nsi  deflate_solid.nsi  full_featured.nsi  lzma_nonsolid.nsi  lzma_solid.nsi
